--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -72,19 +72,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置节点分组标志位
 ;注意，不要造成循环，比如level3的策略C包含了level1的策略A，A又包含了level2的策略B，B又包含了C，这样就构成了循环
 custom_proxy_group=💰 剩余流量`select`(有效期|剩余|剩|剩余流量|套餐|到期|套餐到期|官网)
-;leve1
-custom_proxy_group=🔥 HA 高可用`fallback`[]⭐️ HQ 优质节点`[]🚀 节点选择`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤 普通节点优先(省钱)`fallback`[]普通节点`[]🚀 节点选择`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤🇺🇸 普通节点优先(省钱)-美国`fallback`[]🇺🇸 美国节点NORMAL`[]🇺🇸 美国节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤🇸🇬 普通节点优先(省钱)-新加坡`fallback`[]🇸🇬 新加坡节点NORMAL`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
+
 ;level4
 custom_proxy_group=⭐️ HQ 优质节点`url-test`(HQ)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=普通节点`url-test`(^(?!.*(HQ)).*)`http://cp.cloudflare.com/generate_204`300,,50
-;level2
+
+;level1
 custom_proxy_group=🚀 节点选择`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]⭐️ HQ 优质节点`[]普通节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 
+;leve1
+custom_proxy_group=🔥 HA 高可用`fallback`[]⭐️ HQ 优质节点`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤 普通节点优先(省钱)`fallback`[]普通节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤🇺🇸 普通节点优先(省钱)-美国`fallback`[]🇺🇸 美国节点NORMAL`[]🇺🇸 美国节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤🇸🇬 普通节点优先(省钱)-新加坡`fallback`[]🇸🇬 新加坡节点NORMAL`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
+
+;level2
 custom_proxy_group=🚀 GitHub`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
 custom_proxy_group=🕊️ Twitter(X)`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*
