--- a/cfg/Moli_Clash.ini
+++ b/cfg/Moli_Clash.ini
@@ -83,10 +83,10 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 
 ;leve2
-custom_proxy_group=🔥 HA 高可用`fallback`[]⭐️ HQ 优质节点`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤 普通节点优先(省钱)`fallback`[]普通节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤🇺🇸 普通节点优先(省钱)-美国`fallback`[]🇺🇸 美国节点NORMAL`[]🇺🇸 美国节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🥤🇸🇬 普通节点优先(省钱)-新加坡`fallback`[]🇸🇬 新加坡节点NORMAL`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]⭐️ HQ 优质节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🔥 HA 高可用`fallback`[]⭐️ HQ 优质节点`[]🥤 普通节点优先(省钱)`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤 普通节点优先(省钱)`fallback`[]普通节点`[]⭐️ HQ 优质节点`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤🇺🇸 普通节点优先(省钱)-美国`fallback`[]🇺🇸 美国节点NORMAL`[]🇺🇸 美国节点`[]⭐️ HQ 优质节点`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🥤🇸🇬 普通节点优先(省钱)-新加坡`fallback`[]🇸🇬 新加坡节点NORMAL`[]🇸🇬 新加坡节点`[]⭐️ HQ 优质节点`[]♻️ 自动选择`http://cp.cloudflare.com/generate_204`300,,50
 
 ;level2
 custom_proxy_group=🚀 GitHub`select`[]🔥 HA 高可用`[]🥤 普通节点优先(省钱)`[]🥤🇺🇸 普通节点优先(省钱)-美国`[]🥤🇸🇬 普通节点优先(省钱)-新加坡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🦘 澳洲节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
